Fix detail overflow

--- a/Views/backend/assets/less/all.less
+++ b/Views/backend/assets/less/all.less
@@ -56,6 +56,7 @@
     grid-row: ~"1 / 3";
     display: flex;
     flex-direction: row;
+    overflow-y: auto;
     div.form-container {
 
     }
